// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тестируем CatalogCourses Тестируем рендер  1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <CatalogCourses>
    <Header>
      <div
        className="headerWrapper"
      >
        <header
          className="header"
        >
          <nav
            className="headerNav"
          >
            <IconLogo>
              <a
                className="navLogo"
                href=""
              >
                <img
                  alt="Purple Frontera logo"
                  src="FILE_MOCK"
                />
              </a>
            </IconLogo>
            <HeaderNav>
              <Link
                as={[Function]}
                to="/home"
              >
                <Link
                  className="link"
                  to="/home"
                >
                  <a
                    className="link"
                    href="/home"
                  >
                    Главная
                  </a>
                </Link>
              </Link>
              <Link
                as={[Function]}
                to="/catalog-courses"
              >
                <Link
                  className="link"
                  to="/catalog-courses"
                >
                  <a
                    className="link"
                    href="/catalog-courses"
                  >
                    Рекомендации
                  </a>
                </Link>
              </Link>
            </HeaderNav>
          </nav>
          <AccountBar>
            <div
              className="AccountBar"
            >
              <SearchInput>
                <div
                  className="searchInput"
                >
                  <form
                    className="searchForm"
                  >
                    <label
                      htmlFor="search"
                    >
                      <input
                        id="search"
                        placeholder="Search..."
                        type="text"
                      />
                    </label>
                    <button
                      onClick={[Function]}
                      type="submit"
                    />
                  </form>
                </div>
              </SearchInput>
              <ProfileButton>
                <div
                  className="wrapper"
                >
                  <div
                    className="dropdown"
                  >
                    <button
                      className="dropdownButton"
                      onClick={[Function]}
                      type="button"
                    />
                  </div>
                </div>
              </ProfileButton>
            </div>
          </AccountBar>
        </header>
      </div>
    </Header>
    <main
      className="container"
    >
      <PageHeader
        label="На основании вашего выбора"
      >
        <h2
          className="pageHeader"
        >
          На основании вашего выбора
        </h2>
      </PageHeader>
      <section>
        <Loader>
          <div
            className="spinner"
          >
            <div
              className="bounce1"
            />
            <div
              className="bounce2"
            />
            <div
              className="bounce3"
            />
          </div>
        </Loader>
      </section>
    </main>
  </CatalogCourses>
</Provider>
`;

exports[`Тестируем CatalogCourses Тестируем рендер  2`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <CatalogCourses>
    <Header>
      <div
        className="headerWrapper"
      >
        <header
          className="header"
        >
          <nav
            className="headerNav"
          >
            <IconLogo>
              <a
                className="navLogo"
                href=""
              >
                <img
                  alt="Purple Frontera logo"
                  src="FILE_MOCK"
                />
              </a>
            </IconLogo>
            <HeaderNav>
              <Link
                as={[Function]}
                to="/home"
              >
                <Link
                  className="link"
                  to="/home"
                >
                  <a
                    className="link"
                    href="/home"
                  >
                    Главная
                  </a>
                </Link>
              </Link>
              <Link
                as={[Function]}
                to="/catalog-courses"
              >
                <Link
                  className="link"
                  to="/catalog-courses"
                >
                  <a
                    className="link"
                    href="/catalog-courses"
                  >
                    Рекомендации
                  </a>
                </Link>
              </Link>
            </HeaderNav>
          </nav>
          <AccountBar>
            <div
              className="AccountBar"
            >
              <SearchInput>
                <div
                  className="searchInput"
                >
                  <form
                    className="searchForm"
                  >
                    <label
                      htmlFor="search"
                    >
                      <input
                        id="search"
                        placeholder="Search..."
                        type="text"
                      />
                    </label>
                    <button
                      onClick={[Function]}
                      type="submit"
                    />
                  </form>
                </div>
              </SearchInput>
              <ProfileButton>
                <div
                  className="wrapper"
                >
                  <div
                    className="dropdown"
                  >
                    <button
                      className="dropdownButton"
                      onClick={[Function]}
                      type="button"
                    />
                  </div>
                </div>
              </ProfileButton>
            </div>
          </AccountBar>
        </header>
      </div>
    </Header>
    <main
      className="container"
    >
      <PageHeader
        label="На основании вашего выбора"
      >
        <h2
          className="pageHeader"
        >
          На основании вашего выбора
        </h2>
      </PageHeader>
      <section>
        <CourseCardsLarge
          cards={
            Array [
              Object {
                "id": 1,
                "imageSrc": "remote-assets/images/suggestions/sg-course-1.jpg",
                "label": "React",
              },
              Object {
                "id": 2,
                "imageSrc": "remote-assets/images/suggestions/sg-course-2.jpg",
                "label": "CI/CD",
              },
              Object {
                "id": 3,
                "imageSrc": "remote-assets/images/suggestions/sg-course-3.jpg",
                "label": "Изучаем JS",
              },
              Object {
                "id": 4,
                "imageSrc": "remote-assets/images/suggestions/sg-course-4.jpg",
                "label": "git",
              },
            ]
          }
          showNumber={false}
        >
          <ul
            className="CatalogList"
          >
            <li
              className="CardContainer"
              key="React0"
            >
              <div
                className="CatalogItemLong"
              >
                <SmartImage
                  path="remote-assets/images/suggestions/sg-course-1.jpg"
                >
                  <img
                    className="CardImage"
                    onError={[Function]}
                    src="remote-assets/images/suggestions/sg-course-1.jpg"
                  />
                </SmartImage>
                <Link
                  className="CatalogLinkLong"
                  to="/course-page/1"
                >
                  <a
                    className="CatalogLinkLong"
                    href="/course-page/1"
                  >
                    <h3
                      className="CatalogHeaderLong"
                    >
                      <span
                        className="CatalogCategoryLong"
                      >
                        React
                      </span>
                    </h3>
                  </a>
                </Link>
              </div>
            </li>
            <li
              className="CardContainer"
              key="CI/CD1"
            >
              <div
                className="CatalogItemLong"
              >
                <SmartImage
                  path="remote-assets/images/suggestions/sg-course-2.jpg"
                >
                  <img
                    className="CardImage"
                    onError={[Function]}
                    src="remote-assets/images/suggestions/sg-course-2.jpg"
                  />
                </SmartImage>
                <Link
                  className="CatalogLinkLong"
                  to="/course-page/2"
                >
                  <a
                    className="CatalogLinkLong"
                    href="/course-page/2"
                  >
                    <h3
                      className="CatalogHeaderLong"
                    >
                      <span
                        className="CatalogCategoryLong"
                      >
                        CI/CD
                      </span>
                    </h3>
                  </a>
                </Link>
              </div>
            </li>
            <li
              className="CardContainer"
              key="Изучаем JS2"
            >
              <div
                className="CatalogItemLong"
              >
                <SmartImage
                  path="remote-assets/images/suggestions/sg-course-3.jpg"
                >
                  <img
                    className="CardImage"
                    onError={[Function]}
                    src="remote-assets/images/suggestions/sg-course-3.jpg"
                  />
                </SmartImage>
                <Link
                  className="CatalogLinkLong"
                  to="/course-page/3"
                >
                  <a
                    className="CatalogLinkLong"
                    href="/course-page/3"
                  >
                    <h3
                      className="CatalogHeaderLong"
                    >
                      <span
                        className="CatalogCategoryLong"
                      >
                        Изучаем JS
                      </span>
                    </h3>
                  </a>
                </Link>
              </div>
            </li>
            <li
              className="CardContainer"
              key="git3"
            >
              <div
                className="CatalogItemLong"
              >
                <SmartImage
                  path="remote-assets/images/suggestions/sg-course-4.jpg"
                >
                  <img
                    className="CardImage"
                    onError={[Function]}
                    src="remote-assets/images/suggestions/sg-course-4.jpg"
                  />
                </SmartImage>
                <Link
                  className="CatalogLinkLong"
                  to="/course-page/4"
                >
                  <a
                    className="CatalogLinkLong"
                    href="/course-page/4"
                  >
                    <h3
                      className="CatalogHeaderLong"
                    >
                      <span
                        className="CatalogCategoryLong"
                      >
                        git
                      </span>
                    </h3>
                  </a>
                </Link>
              </div>
            </li>
          </ul>
        </CourseCardsLarge>
      </section>
    </main>
  </CatalogCourses>
</Provider>
`;
